--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+#top-left-text {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px; /* Adjust as needed */
+  background-color: #ffffff;
+  color: #fff;
+}
+
 body {
     margin: 0;
     display: flex;
@@ -17,7 +26,7 @@ body {
     background-color: rgb(255, 255, 255);
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    /* transition: background-color 0.5s ease; */
+    transition: background-color 0.5s ease;
   }
   
   .quote {
@@ -44,4 +53,7 @@ body {
     border-radius: 3px;
     margin-top: 15px;
   }
+
+
+  
   
